@@ -2,6 +2,7 @@ OpenLDAP 2.4 Change Log
 
 OpenLDAP 2.4.25 Engineering
 	Fixed slapd add objectclasses in order (ITS#6837)
+	Fixed slapd sortval handling (ITS#6845)
 	Fixed slapd-ldap chain cn=config support (ITS#6837)
 	Fixed slapd-meta deadlock (ITS#6846)
 	Build Environment
